nginx/sit/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devplify.com
    secretName: selfsigned-cert-tls
  rules:
  - host: devplify.com
    http:
      paths:
      - path: /invitation
        pathType: Prefix
        backend:
          service:
            name: web-k8s-service
            port:
              number: 80
      - path: /api/admin
        pathType: Prefix
        backend:
          service:
            name: admin-k8s-service
            port:
              number: 8081
      - path: /api/orgs
        pathType: Prefix
        backend:
          service:
            name: org-k8s-service
            port:
              number: 8082
      - path: /api/notifications
        pathType: Prefix
        backend:
          service:
            name: notification-k8s-service
            port:
              number: 8087
      - path: /api/audit
        pathType: Prefix
        backend:
          service:
            name: audit-k8s-service
            port:
              number: 8086
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-k8s-service
            port:
              number: 80
